<resources>
    <string name="app_name">StegChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_bar_back">返回</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="agree">同意</string>
    <string name="agreed">已同意</string>
    <string name="refuse">拒绝</string>
    <string name="refused">已拒绝</string>
    <string name="done">完成</string>
    <string name="friend_allow_all">允许任何人添加</string>
    <string name="friend_refuse_all">拒绝任何人添加</string>
    <string name="friend_need_confirm">需验证</string>
    <string name="default_group_name">默认分组</string>
    <string name="change_group_error">修改分组失败</string>
    <string name="people">人</string>
    <string name="login_error">登录失败，请稍后重试</string>
    <string name="login_error_timeout">登录失败，当前无网络</string>
    <string name="login_succ">登录成功</string>
    <string name="kick_logout">你的账号已在其他终端登录,重新登录</string>
    <string name="operate_fail">操作失败</string>
    <string name="need_permission">您需要开启权限,并重启应用</string>
    <string name="save_succ">保存成功</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="save_fail">保存失败</string>
    <string name="save_exist">文件已存在</string>
    <string name="tls_expire">账号登录已过期，请重新登录</string>
    <string name="env_normal">当前连接正式环境</string>
    <string name="env_test">当前连接测试环境</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
    <string name="google_service_not_available">google推送服务不可用，请检查google play设置</string>
    <string name="send_success">发送成功</string>
    <string name="home_conversation_tab">会话</string>
    <string name="home_setting_tab">设置</string>
    <string name="conversation_system">系统消息</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="conversation_del">删除会话</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="home_contact_tab">联系人</string>
    <string name="new_friend">新朋友</string>
    <string name="public_group">公开群</string>
    <string name="discuss_group">讨论组</string>
    <string name="chatroom">聊天室</string>
    <string name="addfriend">添加好友</string>
    <string name="contact_add_group">添加群组</string>
    <string name="manangergroup">管理分组</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_logout_fail">退出登录失败，请稍后重试</string>
    <string name="setting_friend_confirm">好友申请</string>
    <string name="setting_black_list">黑名单</string>
    <string name="setting_message_notify">消息提醒</string>
    <string name="setting_about">关于</string>
    <string name="setting_friend_need_confirm">需验证</string>
    <string name="setting_nick_name_change">修改昵称</string>
    <string name="setting_friend_confirm_change_err">修改验证类型失败</string>
    <string name="search_default">搜索</string>
    <string name="search_cancel">取消</string>
    <string name="search_hint">搜索ID或手机号</string>
    <string name="search_no_result">很抱歉，没有找到符合内容</string>
    <string name="title_addfri">添加好友</string>
    <string name="add_detail_ID">帐号ID</string>
    <string name="add_detail_name">备注名</string>
    <string name="add_detail_group">分组</string>
    <string name="add_detail_message">附加消息</string>
    <string name="add_friend_send">发送添加好友请求</string>
    <string name="add_friend_succeed">请求已发送</string>
    <string name="add_friend_added">已添加好友</string>
    <string name="add_friend_refuse_all">对方拒绝添加任何人为好友</string>
    <string name="add_friend_to_blacklist">我在对方的黑名单中</string>
    <string name="add_friend_error">添加好友失败，请稍后重试</string>
    <string name="add_friend_del_black_list">添加失败，该用户在你的黑名单中，是否将该用户从黑名单中移除（你需要在移除成功后重发添加好友请求）</string>
    <string name="add_friend_del_black_err">移出黑名单失败</string>
    <string name="add_friend_del_black_succ">移出黑名单成功</string>
    <string name="title_manager_group">分组管理</string>
    <string name="add_new_group">添加分组</string>
    <string name="add_dialog_title">添加分组</string>
    <string name="add_dialog_subtitle">请输入新分组的名称</string>
    <string name="add_dialog_null">分组名称不能为空</string>
    <string name="title_confirm_delete_group">确认删除改分组吗？</string>
    <string name="delete_dialog_subtitle">删除分组</string>
    <string name="delete_dialog_subtitle_sur">,该分组好友将移动到默认分组</string>
    <string name="delete_group_succ">删除分组成功</string>
    <string name="add_group_succ">添加分组成功</string>
    <string name="add_group_error_existed">添加失败，分组已存在</string>
    <string name="add_group_error_limit">添加失败，分组达到上限</string>
    <string name="add_group_error">添加分组失败</string>
    <string name="del_group_error">删除分组失败</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_audio_too_long">录音过长，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_pullback">撤回</string>
    <string name="chat_pullback_not_support">改会话不支持消息撤回</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="chat_typing">对方正在输入…</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="profile_detail">详细资料</string>
    <string name="profile_back">返回</string>
    <string name="profile_id">账号</string>
    <string name="profile_remark">备注名</string>
    <string name="profile_black">加入黑名单</string>
    <string name="profile_remark_edit">修改备注</string>
    <string name="profile_chat">发送消息</string>
    <string name="profile_del">删除好友</string>
    <string name="profile_group">添加分组</string>
    <string name="profile_now_group">所在分组</string>
    <string name="profile_del_succeed">删除好友成功</string>
    <string name="profile_del_fail">删除好友失败</string>
    <string name="profile_black_succ">加入黑名单成功</string>
    <string name="chat_setting_title">聊天设置</string>
    <string name="chat_setting_group_member">群成员</string>
    <string name="chat_setting_group_id">群组ID</string>
    <string name="chat_setting_group_name">群名称</string>
    <string name="chat_setting_group_add_opt">加群方式</string>
    <string name="chat_setting_group_msg_alert">消息提醒</string>
    <string name="chat_setting_group_introduce">群介绍</string>
    <string name="chat_setting_group_all_accept">允许任何人加入</string>
    <string name="chat_setting_group_all_reject">禁止加入</string>
    <string name="chat_setting_group_auth">需群主审核</string>
    <string name="chat_setting_quit">退出群</string>
    <string name="chat_setting_dismiss">解散群</string>
    <string name="chat_setting_add">申请加群</string>
    <string name="chat_setting_dismiss_succ">解散群成功</string>
    <string name="chat_setting_quit_succ">退出群成功</string>
    <string name="chat_setting_quit_fail_private">讨论组不能解散</string>
    <string name="chat_setting_change_err">修改失败</string>
    <string name="chat_setting_change_group_name">修改群名称</string>
    <string name="chat_setting_change_group_intro">修改群介绍</string>
    <string name="chat_setting_no_rev">不接收消息</string>
    <string name="chat_setting_rev_notify">接收并提醒消息</string>
    <string name="chat_setting_rev_not_notify">接收不提醒消息</string>
    <string name="chat_setting_invite_error">邀请群成员失败</string>
    <string name="title_new_fri">新朋友</string>
    <string name="newfri_agree">同意</string>
    <string name="newfri_reject">拒绝</string>
    <string name="newfri_do">操作</string>
    <string name="newfri_disagree">已拒绝</string>
    <string name="newfri_accept">已接受</string>
    <string name="newfri_wait">等待验证</string>
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_friend_add">请求添加好友</string>
    <string name="summary_friend_added">我已添加</string>
    <string name="summary_friend_add_me">请求添加</string>
    <string name="summary_friend_recommend">推荐添加</string>
    <string name="summary_me">我</string>
    <string name="summary_group_apply">申请加群</string>
    <string name="summary_group_invite">邀请</string>
    <string name="summary_group_add">加入群</string>
    <string name="summary_agree">同意</string>
    <string name="summary_disagree">拒绝</string>
    <string name="summary_invite_person">邀请人</string>
    <string name="summary_handle_person">处理人</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="summary_group_mem_change">群成员变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
    <string name="time_more">99+</string>
    <string name="title_activity_group_chat_setting">GroupChatSettingActivity</string>
    <string name="title_public_group">公开群</string>
    <string name="btn__create_public_group">创建公开群</string>
    <string name="subtitle_created_public_group">我创建的公开群</string>
    <string name="subtitle_hosting_public_group">我管理的公开群</string>
    <string name="subtitle_joined_public_group">我加入的公开群</string>
    <string name="title_chatroom">聊天室</string>
    <string name="btn__create_chatroom">创建聊天室</string>
    <string name="subtitle_owner_chatrrom">我创建的聊天室</string>
    <string name="subtitle_hosting_chatroom">我管理的聊天室</string>
    <string name="subtitle_joined_chatroom">我加入的聊天室</string>
    <string name="title_private_group">讨论组</string>
    <string name="btn__create_private_group">创建讨论组</string>
    <string name="subtitle_owner_private_group">我创建的讨论组</string>
    <string name="subtitle_hosting_private_group">我管理的讨论组</string>
    <string name="subtitle_joined_private_group">我加入的讨论组</string>
    <string name="title_create_group">创建群</string>
    <string name="subtitle_create_group_name">群名称</string>
    <string name="btn_add_member">添加群成员</string>
    <string name="title_choose_group_members">选择联系人</string>
    <string name="create_group_fail">创建群失败</string>
    <string name="create_group_fail_because_wording">创建失败，群名含有敏感词</string>
    <string name="create_group_succeed">创建群成功</string>
    <string name="create_group_need_name">请输入群名称</string>
    <string name="change_category_title">移至分组</string>
    <string name="search_group_hint">搜索ID或名称</string>
    <string name="edit_error">修改失败</string>
    <string name="choose_title">选择联系人</string>
    <string name="choose_need_one">至少选择一个联系人</string>
    <string name="group_member_profile">成员资料</string>
    <string name="group_member_quiet">设置禁言</string>
    <string name="group_member_manage">设为管理员</string>
    <string name="group_member_card">群名片</string>
    <string name="about_title">关于</string>
    <string name="about_imsdk">IMSDK版本</string>
    <string name="about_qalsdk">QAL版本</string>
    <string name="about_tlssdk">TLS版本</string>
    <string name="about_env">网络环境</string>
    <string name="about_log">日志等级</string>
    <string name="message_notify_title">消息提醒</string>
    <string name="message_notify_push">离线消息推送</string>
    <string name="message_notify_c2c_music">自定义C2C消息推送声音</string>
    <string name="message_notify_group_music">自定义群消息推送声音</string>
</resources>