<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tencent.qcloud.timchat.ui.AboutActivity">
    <com.tencent.qcloud.ui.TemplateTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canBack="true"
        app:titleText="@string/about_title" />


    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/imsdk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:name="@string/about_imsdk" />
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/qalsdk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/about_qalsdk" />
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/tlssdk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/about_tlssdk" />
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/env"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canNav="true"
        app:name="@string/about_env" />
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/logLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isBottom="true"
        app:canNav="true"
        app:name="@string/about_log" />
</LinearLayout>
