<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tencent.qcloud.timchat.ui.GroupProfileActivity">
    <com.tencent.qcloud.ui.TemplateTitle
        android:id="@+id/chat_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:titleText="@string/chat_setting_title"
        app:canBack="true" />

    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/idText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:name="@string/chat_setting_group_id"/>
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canNav="true"
        app:name="@string/chat_setting_group_member"/>
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/chat_setting_group_name" />
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/groupIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/chat_setting_group_introduce" />
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/messageNotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canNav="true"
        app:name="@string/chat_setting_group_msg_alert" />
    <com.tencent.qcloud.ui.LineControllerView
        android:id="@+id/addOpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isBottom="true"
        app:name="@string/chat_setting_group_add_opt" />

    <LinearLayout
        android:id="@+id/controlInGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/bg_negative_btn"
            android:textColor="@color/text_btn"
            android:textSize="18sp"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/btnChat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_positive_btn"
            android:textColor="@color/text_btn"
            android:textSize="18sp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/profile_chat"/>
    </LinearLayout>
    <TextView
        android:id="@+id/controlOutGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_positive_btn"
        android:textColor="@color/text_btn"
        android:textSize="18sp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/chat_setting_add"/>
</LinearLayout>
