<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.tencent.qcloud.ui.TemplateTitle
        android:id="@+id/create_group_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:backText="@string/profile_back"
        app:canBack="true"
        app:titleText="@string/title_create_group" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/subtitle_create_group_name" />

        <EditText
            android:id="@+id/input_group_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_add_group_member"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:background="#BFEFFF"
        android:textColor="#171717"
        android:gravity="center"
        android:text="@string/btn_add_member" />

</LinearLayout>