<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:layout_marginTop="20dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_addgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title_confirm_delete_group"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/select_delete_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/delete_dialog_subtitle"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_blue1"
            android:gravity="center"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/text_blue1"
            android:gravity="center"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>
